@@ -3,6 +3,10 @@
 	* tt_cmap.c (sfnt_get_glyphname, handle_subst_glyphs): Fix error on
 	glyph name lookup.
 
+	* cff.c (cff_glyph_lookup), pdfdev.c (pdf_dev_set_string): Correctly
+	handles the dvi file when Unicode to CID mapping file is specified,
+	where pdf_dev_set_string() got string of cids instead of glyphs.
+
 2014-08-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* pdfobj.c: Fix a typo in check_for_pdf().
